fix: fixed .gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = aoi taniguchi
-	email = aoi.taniguchi@example.com
+	email = aoi.taniguchi@woven-planet.global
 [pull]
 	rebase = false
 	ff = only
