--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
-set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",xterm-256color:Tc"
+#set -g default-terminal "screen-256color"
+#set -ga terminal-overrides ",xterm-256color:Tc"
 
 # action key
 unbind C-b
@@ -11,15 +11,12 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # powerline
-run-shell "powerline-daemon -q"
-source ~/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+#run-shell "pokerline-daemon -q"
+#source ~/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
 
 # key bindings
 
-## prefix + -
 bind - split-window -v
-
-## prefix + |
 bind | split-window -h
 
 # # pane switching
@@ -52,30 +49,23 @@ bind -n C-right resize-pane -R 5
 bind-key -n C-S-left swap-window -t -1
 bind-key -n C-S-right swap-window -t +1
 
-## ペインの順次移動をCtr + o に設定
+## moving panes
 bind -n C-o select-pane -t :.+
 
 ## swap panes (default: Prefix + C-o)
 
-## 並列実行のトグル化
+## toggle synchronize panes
 bind s setw synchronize-panes \; display "synchronize-panes #{?pane_synchronized,on,off}"
 
 ## reload conf
 bind r source-file ~/.tmux.conf \; display "configuration reloaded"
 
-# status lineの設定
-
-## status line top
-#set-option -g status-position top
-
-# 操作系
-
-## マウス操作を有効化
+## enable mouse
 set -g mouse on
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
 
-## コマンドモードでの選択方法をvim風に変更
+## change selection in the command mode to vim-ish
 set-window-option -g mode-keys vi
 setw -g mode-keys vi
 bind-key -T copy-mode-vi v send -X begin-selection
@@ -85,3 +75,10 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -ip && xsel -
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xsel -ip && xsel -op | xsel -ib"
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -ip && xsel -op | xsel -ib"
 
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'arcticicestudio/nord-tmux'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
