feature: updated keymaps

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,8 +44,8 @@ bind -n C-left resize-pane -L 5
 bind -n C-right resize-pane -R 5
 
 ## moving window
-bind-key -n C-S-left swap-window -t -1
-bind-key -n C-S-right swap-window -t +1
+# bind-key -n C-S-left swap-window -t -1
+# bind-key -n C-S-right swap-window -t +1
 
 ## moving panes
 bind -n C-o select-pane -t :.+
