--- a/.gitconfig
+++ b/.gitconfig
@@ -1,23 +1,41 @@
 [user]
 	name = aoi taniguchi
 	email = aoi.taniguchi@woven-planet.global
+
 [pull]
-	rebase = false
-	ff = only
+	rebase = true
+
 [credential "https://github.tmc-stargate.com"]
-	helper =
 	helper = !/usr/bin/gh auth git-credential
+
 [credential "https://github.com"]
-	helper =
 	helper = !/usr/bin/gh auth git-credential
+
 [credential "https://gist.github.com"]
-	helper =
 	helper = !/usr/bin/gh auth git-credential
+
+[core]
+    pager = delta
+
+[interactive]
+    diffFilter = delta --color-only
+
+[delta]
+    side-by-side = true
+    line-numbers = true
+    navigate = true    # use n and N to move between diff sections
+    light = false      # set to true if you're in a terminal w/ a light background color (e.g. the default macOS terminal)
+
+[merge]
+    conflictstyle = diff3
+
 [difftool]
 	prompt = true
+
 [diff]
 	tool = nvimdiff
+    colorMoved = default
+
 [difftool "nvimdiff"]
     cmd = "nv -d \"$LOCAL\" \"$REMOTE\""
-[alias]
 
