feat: push tabby.conf changes

--- a/.tabby.conf
+++ b/.tabby.conf
@@ -1,21 +1,10 @@
 version: 3
 profiles:
   - type: ssh
-    name: guest@172.16.0.132
     icon: fas fa-desktop
     options:
-      host: 172.16.0.132
-      user: guest
+      host: XH23100020-L.pc.internal.woven.tech
       algorithms:
-        cipher:
-          - aes128-ctr
-          - aes128-gcm
-          - aes128-gcm@openssh.com
-          - aes192-ctr
-          - aes256-ctr
-          - aes256-gcm
-          - aes256-gcm@openssh.com
-          - chacha20-poly1305@openssh.com
         hmac:
           - hmac-sha1
           - hmac-sha1-etm@openssh.com
@@ -35,6 +24,14 @@ profiles:
           - ecdh-sha2-nistp256
           - ecdh-sha2-nistp384
           - ecdh-sha2-nistp521
+        cipher:
+          - aes128-ctr
+          - aes128-gcm
+          - aes128-gcm@openssh.com
+          - aes192-ctr
+          - aes256-ctr
+          - aes256-gcm
+          - aes256-gcm@openssh.com
         serverHostKey:
           - ecdsa-sha2-nistp256
           - ecdsa-sha2-nistp384
@@ -43,114 +40,165 @@ profiles:
           - rsa-sha2-512
           - ssh-ed25519
           - ssh-rsa
+      user: aoi-taniguchi
       auth: password
-      x11: true
-      forwardedPorts:
-        - type: Local
-          host: 127.0.0.1
-          port: 8080
-          targetAddress: 127.0.0.1
-          targetPort: 8080
-          description: ''
       privateKeys: []
+      forwardedPorts: []
       scripts: []
     weight: -1
-    id: ssh:custom:guest@172.16.0.132:55fdba2d-5451-4127-ac96-5017c04cbfcc
+    name: aoi-taniguchi@XH23100020-L.pc.internal.woven.tech
+    id: ssh:custom:aoi-taniguchi@XH23100020-L:b9491a79-969c-469b-8e8b-cf1e4d068cbe
+  - type: ssh
+    icon: fas fa-desktop
+    options:
+      host: 172.18.4.170
+      algorithms:
+        hmac:
+          - hmac-sha1
+          - hmac-sha1-etm@openssh.com
+          - hmac-sha2-256
+          - hmac-sha2-256-etm@openssh.com
+          - hmac-sha2-512
+          - hmac-sha2-512-etm@openssh.com
+        kex:
+          - curve25519-sha256
+          - curve25519-sha256@libssh.org
+          - diffie-hellman-group-exchange-sha256
+          - diffie-hellman-group14-sha256
+          - diffie-hellman-group15-sha512
+          - diffie-hellman-group16-sha512
+          - diffie-hellman-group17-sha512
+          - diffie-hellman-group18-sha512
+          - ecdh-sha2-nistp256
+          - ecdh-sha2-nistp384
+          - ecdh-sha2-nistp521
+        cipher:
+          - aes128-ctr
+          - aes128-gcm
+          - aes128-gcm@openssh.com
+          - aes192-ctr
+          - aes256-ctr
+          - aes256-gcm
+          - aes256-gcm@openssh.com
+        serverHostKey:
+          - ecdsa-sha2-nistp256
+          - ecdsa-sha2-nistp384
+          - ecdsa-sha2-nistp521
+          - rsa-sha2-256
+          - rsa-sha2-512
+          - ssh-ed25519
+          - ssh-rsa
+      user: tmpuser
+      auth: password
+      privateKeys: []
+      forwardedPorts: []
+      scripts: []
+    weight: -1
+    name: tmpuser@172.18.4.170
+    id: ssh:custom:tmpuser@172.18.4.170:ef4e8bf5-197a-4501-bc62-52ca9f257f4b
+  - type: ssh
+    icon: fas fa-desktop
+    options:
+      host: XH18120054-L.pc.internal.woven.tech
+      algorithms: {}
+      user: guest
+      auth: password
+    weight: -1
+    name: '[obsolete] guest@XH18120054-L.pc.internal.woven.tech copy'
+    id: >-
+      ssh:custom:guest@XH18120054-L.pc.internal.woven.tech-copy:b8fb3bb7-0bb1-457b-8656-26cd23e42899
+  - type: ssh
+    icon: fas fa-desktop
+    options:
+      host: XH18120054-L.pc.internal.woven.tech
+      algorithms: {}
+      user: aoi-taniguchi
+      auth: password
+    weight: -1
+    name: '[obsolete] aoi-taniguchi@XH18120054-L.pc.internal.woven.tech'
+    id: >-
+      ssh:custom:XH18120054-L.pc.internal.woven.tech:bb5e254c-8dbd-45aa-9444-5b31f318f66b
+  - type: ssh
+    name: '[obsolete] aoi-taniguchi@172.18.0.132'
+    icon: fas fa-desktop
+    options:
+      host: 172.18.0.132
+      algorithms: {}
+      user: aoi-taniguchi
+      auth: password
+    weight: -1
+    id: >-
+      ssh:custom:aoi-taniguchi@172.18.0.132-copy:d0895718-7465-4847-922f-bcf715bdd504
+  - type: ssh
+    name: '[obsolete] guest@172.18.0.132'
+    icon: fas fa-desktop
+    options:
+      host: 172.18.0.132
+      algorithms: {}
+      user: guest
+      auth: password
+    weight: -1
+    id: ssh:custom:guest@172.18.0.132:9e3e5a3b-6183-43ac-a8f7-aef1f3c20f42
 hotkeys:
-  toggle-window:
-    - Ctrl-Space
+  toggle-window: []
   copy-current-path: []
   ctrl-c:
     - Ctrl-C
   copy:
-    - Ctrl-Shift-C
+    - - Ctrl-Shift-C
   paste:
-    - Ctrl-Shift-V
-    - Shift-Insert
+    - - Ctrl-Shift-V
   select-all:
     - Ctrl-Shift-A
   clear: []
   zoom-in:
-    - - Ctrl-;
     - - Ctrl-Shift-;
   zoom-out:
-    - Ctrl--
-    - Ctrl-Shift--
+    - - Ctrl--
   reset-zoom:
     - Ctrl-0
-  home:
-    - Home
-  end:
-    - End
-  previous-word:
-    - Ctrl-Left
-  next-word:
-    - Ctrl-Right
-  delete-previous-word:
-    - Ctrl-Backspace
-  delete-next-word:
-    - Ctrl-Delete
-  search:
-    - Ctrl-Shift-F
-  pane-focus-all:
-    - Ctrl-Shift-I
+  home: []
+  end: []
+  previous-word: []
+  next-word: []
+  delete-previous-word: []
+  delete-next-word: []
+  search: []
+  pane-focus-all: []
   restart-telnet-session: []
   restart-ssh-session: []
   launch-winscp: []
-  settings:
-    - Ctrl-,
+  settings: []
   serial:
     - Alt-K
   restart-serial-session: []
-  new-window:
-    - Ctrl-Shift-N
-  new-tab:
-    - Ctrl-Shift-T
+  new-window: []
+  new-tab: []
   profile: {}
   profile-selectors: {}
-  toggle-fullscreen:
-    - F11
-    - Alt-Enter
-  close-tab:
-    - Ctrl-Shift-W
-  reopen-tab:
-    - Ctrl-Shift-T
+  toggle-fullscreen: []
+  close-tab: []
+  reopen-tab: []
   toggle-last-tab: []
-  rename-tab:
-    - Ctrl-Shift-R
+  rename-tab: []
   next-tab:
-    - Ctrl-Shift-Right
-    - Ctrl-Tab
+    - - Ctrl-Tab
   previous-tab:
-    - Ctrl-Shift-Left
-    - Ctrl-Shift-Tab
-  move-tab-left:
-    - Ctrl-Shift-PageUp
-  move-tab-right:
-    - Ctrl-Shift-PageDown
-  rearrange-panes:
-    - Ctrl-Shift
+    - - Ctrl-Shift-Tab
+  move-tab-left: []
+  move-tab-right: []
+  rearrange-panes: []
   duplicate-tab: []
-  tab-1:
-    - Alt-1
-  tab-2:
-    - Alt-2
-  tab-3:
-    - Alt-3
-  tab-4:
-    - Alt-4
-  tab-5:
-    - Alt-5
-  tab-6:
-    - Alt-6
-  tab-7:
-    - Alt-7
-  tab-8:
-    - Alt-8
-  tab-9:
-    - Alt-9
-  tab-10:
-    - Alt-0
+  tab-1: []
+  tab-2: []
+  tab-3: []
+  tab-4: []
+  tab-5: []
+  tab-6: []
+  tab-7: []
+  tab-8: []
+  tab-9: []
+  tab-10: []
   tab-11: []
   tab-12: []
   tab-13: []
@@ -161,39 +209,25 @@ hotkeys:
   tab-18: []
   tab-19: []
   tab-20: []
-  split-right:
-    - Ctrl-Shift-E
-  split-bottom:
-    - Ctrl-Shift-D
+  split-right: []
+  split-bottom: []
   split-left: []
   split-top: []
-  pane-nav-right:
-    - Ctrl-Alt-Right
-  pane-nav-down:
-    - Ctrl-Alt-Down
-  pane-nav-up:
-    - Ctrl-Alt-Up
-  pane-nav-left:
-    - Ctrl-Alt-Left
-  pane-nav-previous:
-    - Ctrl-Alt-[
-  pane-nav-next:
-    - Ctrl-Alt-]
-  pane-maximize:
-    - Ctrl-Alt-Enter
+  pane-nav-right: []
+  pane-nav-down: []
+  pane-nav-up: []
+  pane-nav-left: []
+  pane-nav-previous: []
+  pane-nav-next: []
+  pane-maximize: []
   close-pane: []
-  switch-profile:
-    - Ctrl-Alt-T
-  profile-selector:
-    - Ctrl-Shift-T
+  switch-profile: []
+  profile-selector: []
   scroll-to-bottom: []
-  delete-line:
-    - Ctrl-Shift-Backspace
+  delete-line: []
   settings-tab: {}
-  explode-tab:
-    - Ctrl-Shift-.
-  combine-tabs:
-    - Ctrl-Shift-,
+  explode-tab: []
+  combine-tabs: []
   pane-nav-1: []
   pane-nav-2: []
   pane-nav-3: []
@@ -208,46 +242,66 @@ hotkeys:
   pane-increase-horizontal: []
   pane-decrease-horizontal: []
 terminal:
-  searcOptions: {}
+  searchOptions: {}
   colorScheme:
-    name: Material
-    foreground: '#eceff1'
-    background: rgba(38, 50, 56, 1)
-    selection: null
-    cursor: '#FFCC00'
-    cursorAccent: null
+    name: Nord
+    foreground: '#d8dee9'
+    background: '#2e3440'
+    cursor: '#d8dee9'
     colors:
-      - '#000000'
-      - '#D62341'
-      - '#9ECE58'
-      - '#FAED70'
-      - '#396FE2'
-      - '#BB80B3'
-      - '#2DDAFD'
-      - '#d0d0d0'
-      - rgba(255, 255, 255, 0.2)
-      - '#FF5370'
-      - '#C3E88D'
-      - '#FFCB6B'
-      - '#82AAFF'
-      - '#C792EA'
-      - '#89DDFF'
-      - '#ffffff'
-  fontSize: 25
+      - '#3b4252'
+      - '#bf616a'
+      - '#a3be8c'
+      - '#ebcb8b'
+      - '#81a1c1'
+      - '#b48ead'
+      - '#88c0d0'
+      - '#e5e9f0'
+      - '#373e4d'
+      - '#94545d'
+      - '#809575'
+      - '#b29e75'
+      - '#68809a'
+      - '#8c738c'
+      - '#6d96a5'
+      - '#aeb3bb'
   customColorSchemes: []
+  fontSize: 18
+  fallbackFont: ''
+  font: RobotoMono Nerd Font
 ssh:
   knownHosts:
     - host: 172.16.0.132
       port: 22
       type: ecdsa-sha2-nistp256
       digest: 7Ab4jjFTU9OCmetCkRIBAIjB9Z3y11GMpTC2hCGNMR4=
+    - host: 172.18.0.132
+      port: 22
+      type: ecdsa-sha2-nistp256
+      digest: 7Ab4jjFTU9OCmetCkRIBAIjB9Z3y11GMpTC2hCGNMR4=
+    - host: XH18120054-L.pc.internal.woven.tech
+      port: 22
+      type: ecdsa-sha2-nistp256
+      digest: 7Ab4jjFTU9OCmetCkRIBAIjB9Z3y11GMpTC2hCGNMR4=
+    - host: 172.18.4.170
+      port: 22
+      type: ecdsa-sha2-nistp256
+      digest: LJp2oQpyEljz4XBJt6dXObH+TY2L8JAbm+wmVstcml4=
+    - host: XH23100020-L.pc.internal.woven.tech
+      port: 22
+      type: ecdsa-sha2-nistp256
+      digest: LJp2oQpyEljz4XBJt6dXObH+TY2L8JAbm+wmVstcml4=
 configSync:
   parts: {}
 clickableLinks: {}
-appearance:
-  opacity: 0.93
+appearance: {}
 hacks: {}
-pluginBlacklist: []
 enableAnalytics: false
 profileDefaults: {}
 accessibility: {}
+enableWelcomeTab: false
+pluginBlacklist: []
+electronFlags:
+  - - force_discrete_gpu
+    - '0'
+
