chore: updated .tabby.conf

--- a/.tabby.conf
+++ b/.tabby.conf
@@ -269,6 +269,8 @@ terminal:
   fontSize: 18
   fallbackFont: ''
   font: RobotoMono Nerd Font
+  showTabProfileIcon: true
+  profile: local:wsl-Ubuntu-2004
 ssh:
   knownHosts:
     - host: 172.16.0.132
